# gelatina

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
src/: main.rs
