[package]
name = "gelatina-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gelatina"
path = "src/main.rs"

[dependencies]
gelatina = { version = "0.1.0", path = "../lib"}
color-eyre = "0.6.1"
clap = { version = "3.1.14", features = ["color", "derive", "unicode", "suggestions", "wrap_help"] }
reqwest = { version = "0.11.10", features = ["blocking", "native-tls-vendored"]}
